Fix brand icons

--- a/src/app/components/share/share.html
+++ b/src/app/components/share/share.html
@@ -4,18 +4,18 @@
          data-layout="link" data-mobile-iframe="true">
             <a class="fb-xfbml-parse-ignore facebook btn" target="_blank"
               href="https://www.facebook.com/sharer/sharer.php?u={model.pageUrl}&src=share_button&sdk=joey&display=popup&app_id=">
-                  <i class="social-icon fa fa-facebook-official"></i>
+                  <i class="social-icon fab fa-facebook"></i>
                   Facebook
               </a>
         </div>
         <a href="https://twitter.com/intent/tweet?text={model.message}&url={model.pageUrl}"
          class="twitter twitter-share-button btn">
-            <i class="social-icon fa fa-twitter"></i>
+            <i class="social-icon fab fa-twitter"></i>
             Twitter
         </a>
         <a class="linkedin btn"
          href="https://www.linkedin.com/shareArticle?url={model.pageUrl}&mini=true&source=OpenStax&title={model.message}">
-            <i class="social-icon fa fa-linkedin-square"></i>
+            <i class="social-icon fab fa-linkedin"></i>
             LinkedIn
         </a>
     </div>
