--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -9,6 +9,7 @@
         height: 0;
         opacity: 0;
         overflow: hidden;
+        padding: 0;
         position: absolute;
         text-align: left;
     }
