--- a/src/app/components/get-this-title-new/order-print-copy/order-print-copy.html
+++ b/src/app/components/get-this-title-new/order-print-copy/order-print-copy.html
@@ -16,6 +16,7 @@
         </div>
     </div>
     <div class="larger-version">
+        <!--  TODO: put in CMS  -->
         <h1>I am a...</h1>
         <div class="boxes boxes-{model.boxCount}">
             <div if="model.individualLink" class="box">
