--- a/src/app/pages/details/details-tab/details-tab.scss
+++ b/src/app/pages/details/details-tab/details-tab.scss
@@ -5,7 +5,7 @@
     grid-gap: $normal-margin;
 
     @include wider-than($tablet-max) {
-        grid-template-columns: 1fr auto;
+        grid-template-columns: auto auto;
     }
 
     p,
