--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -93,27 +93,16 @@
                 @include wider-than($text-content-max) {
                     padding-left: $normal-margin;
                 }
-
-                .title-image {
-                    max-width: 100%;
-
-                    @include width-up-to($phone-max) {
-                        height: 12rem;
-                    }
-
-                    @include width-between($phone-max, $tablet-max) {
-                        height: 24rem;
-                    }
-
-                    @include wider-than($tablet-max) {
-                        height: 32rem;
-                    }
-                }
             }
 
             .image-heading {
                 line-height: 0;
                 margin: 0;
+                text-align: left;
+
+                .title-image {
+                    max-width: 100%;
+                }
             }
 
             .volume {
