--- a/src/app/components/accordion-group/accordion-group.scss
+++ b/src/app/components/accordion-group/accordion-group.scss
@@ -8,11 +8,12 @@
     .accordion-item {
 
         > .control-bar {
-            align-items: baseline;
+            align-items: center;
             background-color: ui-color(white);
             display: flex;
+            height: 5rem;
             justify-content: space-between;
-            padding: 1rem 2rem;
+            padding: 0 2rem;
 
             .chevron {
                 font-size: 80%;
