Fixes from RC meeting

--- a/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.html
+++ b/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.html
@@ -32,7 +32,7 @@
     </div>
     <a href="{model.webinar.url}" class="webinars">
         <div class="icon-cell"><span class="fa fa-desktop"></span></div>
-        <div>
+        <div class="blurb">
             <h2>{model.webinar.text}</h2>
             <div class="blurb" data-html="webinar.blurb" skip="true"></div>
         </div>
