--- a/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.scss
+++ b/src/app/pages/details/instructor-resource-tab/instructor-resource-tab.scss
@@ -33,7 +33,8 @@ $icon-size: 6rem;
         align-items: center;
         display: grid;
         grid-gap: 1rem;
-        grid-template-columns: auto $text-content-max 1fr;
+        grid-template-columns: $icon-size 1fr;
+        max-width: 100%;
         text-decoration: none;
 
         .icon-cell {
@@ -44,6 +45,10 @@ $icon-size: 6rem;
             height: $icon-size;
             justify-content: center;
             width: $icon-size;
+        }
+
+        .blurb {
+            max-width: $text-content-max;
         }
 
         h2 {
