--- a/src/app/pages/details/phone-view/phone-view.scss
+++ b/src/app/pages/details/phone-view/phone-view.scss
@@ -8,7 +8,7 @@
 
         .get-the-book {
             background-color: ui-color(white);
-            padding: 1rem $normal-margin 0;
+            padding: 1rem $normal-margin;
 
             .option {
                 font-size: 1.8rem; // for the icons
